# rsomics-bed-closest

./: Cargo.toml
benches/: bed_closest.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: a.bed  b.bed
